# Easypt

./: .gitignore  .gitmodules  Abstractions.cpp  Abstractions.h  Array.cpp  Array.h  BlockCallable.cpp  BlockCallable.h  Boolean.cpp  Boolean.h  CMakeLists.txt  Common.cpp  Common.h  Core.cpp  Core.h  Double.cpp  Double.h  IO.cpp  IO.h  Int.cpp  Int.h  Object.cpp  Object.h  README.md  SequentialTask.cpp  SequentialTask.h  String_.cpp  String_.h  appveyor.yml  asyncTasks.cpp  asyncTasks.h  exception.h  jit.h  main.cpp  name.cpp  name.h  nativeLibrary.h  nobject.cpp  nobject.h  osDependent.cpp  (+12 more)
anyImplementation/: any.hpp
docs/: arrays.md  basics.md  classes.md  classes2.md  conditionals_and_loops.md  docs..Root.Array.==.md  docs..Root.Array.begin.md  docs..Root.Array.end.md  docs..Root.Array.erase.md  docs..Root.Array.insert.md  docs..Root.Array.md  docs..Root.Array.pushBack.md  docs..Root.Array.readOperator.md  docs..Root.Array.resize.md  docs..Root.Array.size.md  docs..Root.Array.subarray.md  docs..Root.ArrayIterator.++.md  docs..Root.ArrayIterator.+.md  docs..Root.ArrayIterator.--.md  docs..Root.ArrayIterator.-.md  docs..Root.ArrayIterator.==.md  docs..Root.ArrayIterator.distance.md  docs..Root.ArrayIterator.get.md  docs..Root.ArrayIterator.greater.md  docs..Root.ArrayIterator.greater=.md  docs..Root.ArrayIterator.less-.md  docs..Root.ArrayIterator.less.md  docs..Root.ArrayIterator.less=.md  docs..Root.ArrayIterator.md  docs..Root.Basic.md  docs..Root.BlockCallable.==.md  docs..Root.BlockCallable.callOperator.md  docs..Root.BlockCallable.for.md  docs..Root.BlockCallable.getThis.md  docs..Root.BlockCallable.if.md  docs..Root.BlockCallable.md  docs..Root.BlockCallable.return.md  docs..Root.BlockCallable.throw.md  docs..Root.BlockCallable.try.md  docs..Root.BlockCallable.while.md  (+199 more)
easypt_vsce/: .gitignore  CHANGELOG.md  README.md  language-configuration.json  package-lock.json  package.json  postinstall.js
easypt_vsce/snippets/: easypt.json
easypt_vsce/syntaxes/: easypt.tmLanguage.json
examples/: interface.ez  json.ez  sc2.ez  sfHttp.ez  test.ez
tcc/: libtcc.lib
tests/: test.ez
